build: improve docker config and fix tailwind build
- Add .dockerignore files to root, client, and server
- Migrate client CSS to Tailwind v4
- Remove conflicting Tailwind config files
- Update Dockerfiles for better caching and context management

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,13 @@
-FROM node:22-alpine
+FROM node:20-slim
+
 WORKDIR /app
-COPY package*.json ./
+
+COPY package*.json postcss.config.js eslint.config.js ./
+
 RUN npm install
+
 COPY . .
+
 EXPOSE 3000
+
 CMD ["npm", "run", "dev"]
