--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,12 @@ services:
     build: ./server
     ports:
       - "5001:5000"
+    volumes:
+      - ./server:/app
+      - /app/node_modules
+    environment:
+      - HOST=0.0.0.0
+      - PORT=5000
     # Essential for Mac/Puppeteer stability
     shm_size: '2gb'
     deploy:
